--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <title>Algorithm widget sample</title>
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/knockout/dist/knockout.js"></script>
+
+    <script src="lib/algorithm.js"></script>
+    <script type="text/html" src="lib/algorithm.html"></script>
+    <link href="lib/algorithm.min.css" rel="stylesheet" />
+
+    <script src="index.js"></script>
 </head>
 <body>
-    <div id="algorithm-host">
+    <div id="algorithm-host" style="margin: 10px; padding: 10px; border: 1px solid black" data-bind="algorithmView: { value: algorithm }">
     </div>
     <script>
         (function () {
