Gat rid of FA usage

--- a/widget/algorithmview.html
+++ b/widget/algorithmview.html
@@ -54,7 +54,9 @@
                 <div style="position:absolute; top:-0.5em; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
                 <!-- /ko -->
                 <!-- ko if: state() === "completed" -->
-                <div style="position:absolute; top:-0.5em; line-height: 1em; right:15px; background-color: white;"><i class="fa fa-fw fa-check" style="color: green;"></i></div>
+                <div style="position:absolute; top:-0.5em; line-height: 1em; right:15px; background-color: white;">
+                    <span style="color: green; font-family: wingdings; font-size: 200%;">&#252;</span>
+                </div>
                 <!-- /ko -->
                 <!-- ko if: state() === "inprogress" -->
                 <!--<div style="position:absolute; top:-0.5em; line-height: 1em; right:15px; background-color: white;"><i class="fa fa-fw fa-circle" style="color: yellow;"></i></div>-->
