Connector label, more interesting test data

--- a/widget/algorithmview.html
+++ b/widget/algorithmview.html
@@ -12,7 +12,7 @@
                     </svg>
                 </div>
                 <!-- ko if: label() -->
-                <div style="position:absolute; top:47%; left:-11px; background-color: white;" data-bind="text: label"></div>
+                <div class="connector-label" data-bind="text: label"></div>
                 <!-- /ko -->
             </div>
             <!-- /ko -->
@@ -25,7 +25,7 @@
                     </svg>
                 </div>
                 <!-- ko if: label() -->
-                <div style="position:absolute; top:47%; left:-11px; background-color: white;" data-bind="text: label"></div>
+                <div class="connector-label" data-bind="text: label"></div>
                 <!-- /ko -->
             </div>
             <!-- /ko -->
