Housekeeping, TS 1.4 for VS

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/knockout/dist/knockout.js"></script>
 
-    <script src="lib/algorithm.js"></script>
-    <script type="text/html" src="lib/algorithm.html"></script>
-    <link href="lib/algorithm.min.css" rel="stylesheet" />
+    <script src="dist/algorithm.js"></script>
+    <script type="text/html" src="dist/algorithm.html"></script>
+    <link href="dist/algorithm.min.css" rel="stylesheet" />
 
     <script src="index.js"></script>
 </head>
