Grunt QUnit for tests

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -9,7 +9,7 @@
     <script src="../vendor/qunit/qunit/qunit.js"></script>
     <link href="../vendor/qunit/qunit/qunit.css" rel="stylesheet" />
     
-    <script src="../lib/algorithm.js"></script>
+    <script src="../dist/algorithm.js"></script>
 
     <script src="algorithm.tests.js"></script>
 
