--- a/widget/algorithmview.html
+++ b/widget/algorithmview.html
@@ -48,23 +48,30 @@
         <div style="position:relative; top: 0;" data-bind="style: { 'left': connectorsAreaWidth() + 'px', width: blockWidth() + 'px' }">
             <!-- ko foreach: blocks -->
             <!-- ko ifnot: isCondition -->
-            <div class="algorithm-block algorithm-block-item" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0', 'borderRadius': (isTerminator() ? $parent.blockMinDistance() : 0) + 'px' }, css : { 'block-shadow': state() === 'inprogress'}">
-                <div style="position:relative; width:100%; height:100%; padding:0 10px; text-align:center; vertical-align:middle; text-overflow:ellipsis; overflow: hidden; white-space:nowrap;" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
+            <div class="algorithm-block algorithm-block-item" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }, css : { 'algorithm-block-inprogress': state() === 'inprogress', 'algorithm-block-teminator': isTerminator }">
+                <div class="algorithm-block-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
                 <!-- ko if: num() -->
                 <div style="position:absolute; top:-0.5em; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
                 <!-- /ko -->
                 <!-- ko if: state() === "completed" -->
-                <div style="position:absolute; top:-0.5em; line-height: 1em; right:15px; background-color: white;">
+                <div style="position:absolute; top:-0.5em; line-height: 1em; right:15px;">
                     <span style="color: green; font-family: wingdings; font-size: 200%;">&#252;</span>
                 </div>
                 <!-- /ko -->
-                <!-- ko if: state() === "inprogress" -->
-                <!--<div style="position:absolute; top:-0.5em; line-height: 1em; right:15px; background-color: white;"><i class="fa fa-fw fa-circle" style="color: yellow;"></i></div>-->
+                <!-- ko ifnot: isTerminator -->
+                <div class="algorithm-block-controls">
+                    <div class="algorithm-block-command algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data, true); }, attr: { 'data-title': $parent.addTitleBefore }"></div>
+                    <div style="position:relative; height:16px; top:-3px;">
+                        <div class="algorithm-block-command algorithm-block-command-edit" data-bind="click: function() { $parent.editBlock($data); }, attr: { 'data-title': $parent.editTitle }"></div>
+                        <div class="algorithm-block-command algorithm-block-command-remove" data-bind="click: function() { $parent.removeBlock($data); }, attr: { 'data-title': $parent.removeTitle }"></div>
+                    </div>
+                    <div class="algorithm-block-command algorithm-block-command-add" style="top:-3px;" data-bind="click: function() { $parent.addBlock($data); }, attr: { 'data-title': $parent.addTitleAfter }"></div>
+                </div>
                 <!-- /ko -->
             </div>
             <!-- /ko -->
             <!-- ko if: isCondition -->
-            <div class="algorithm-block algorithm-block-condition" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0', 'borderRadius': (isTerminator() ? $parent.blockMinDistance() : 0) + 'px' }">
+            <div class="algorithm-block algorithm-block-condition" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }">
                 <span data-bind="text: text"></span>
                 <svg height="100%" width="100%" style="position:absolute;left:0;">
                     <line x1="50%" y1="0" x2="100%" y2="50%" style="stroke:black;stroke-width:1" />
