--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -45,11 +45,11 @@
             <!-- /ko -->
             <!-- /ko -->
         </div>
-        <div class="algorithm-blocks" data-bind="style: { 'left': connectorsAreaWidth() + 'px', width: blockWidth() + 'px' }">
+        <div class="algorithm-blocks" data-bind="draggableblocks: $data, style: { 'left': connectorsAreaWidth() + 'px', width: blockWidth() + 'px' }">
             <!-- ko foreach: blocks -->
             <!-- ko ifnot: isCondition -->
-            <div class="algorithm-block algorithm-block-item" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }, css : { 'algorithm-block-inprogress': state() === 'inprogress', 'algorithm-block-teminator': isTerminator }">
-                <div class="algorithm-block-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
+            <div class="algorithm-block algorithm-block-item" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }, css: { 'algorithm-block-inprogress': state() === 'inprogress', 'algorithm-block-teminator': isTerminator }">
+                <div class="algorithm-block-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text, attr: { 'draggable': !isTerminator() }"></div>
                 <!-- ko if: num() -->
                 <div style="position:absolute; top:-0.5em; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
                 <!-- /ko -->
@@ -85,7 +85,7 @@
             </div>
             <!-- /ko -->
             <!-- /ko -->
-            </div>
+        </div>
         <div class="algorithm-comments" data-bind="style: { 'top': -blockMinDistance() + 'px', 'left': connectorsAreaWidth() + blockWidth() + 'px', width: commentWidth() + 'px' }">
             <!-- ko foreach: blocks -->
             <div style="position: relative" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }">
