--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -65,11 +65,20 @@
             <!-- /ko -->
             <!-- ko if: isCondition -->
             <div class="algorithm-block algorithm-block-condition" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }">
+                <div class="algorithm-block-shadow">
+                    <svg width='100%' height='100%' style="position:absolute;left:0;">
+                        <defs>
+                            <filter id="algorithm-block-shadow-filter" x="-0.5" y="-0.5" width="200%" height="200%">
+                                <feOffset result="offOut" in="SourceAlpha" dx="0" dy="0" />
+                                <feGaussianBlur result="blurOut" in="offOut" stdDeviation="0.1" />
+                                <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+                            </filter>
+                        </defs>
+                        <polygon data-bind="attr: { 'points': '0 ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' 0, ' + $parent.blockWidth() + ' ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' ' + height() }" style="stroke:gray;stroke-width:1" filter="url(#algorithm-block-shadow-filter)" />
+                    </svg>
+                </div>
                 <svg height="100%" width="100%" style="position:absolute;left:0;">
-                    <line x1="50%" y1="0" x2="100%" y2="50%" style="stroke:black;stroke-width:1" />
-                    <line x1="0" y1="50%" x2="50%" y2="0" style="stroke:black;stroke-width:1" />
-                    <line x1="0" y1="50%" x2="50%" y2="100%" style="stroke:black;stroke-width:1" />
-                    <line x1="50%" y1="100%" x2="100%" y2="50%" style="stroke:black;stroke-width:1" />
+                    <polygon data-bind="attr: { 'points': '0 ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' 0, ' + $parent.blockWidth() + ' ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' ' + height() }" style="fill:white;stroke:black;stroke-width:1" />
                 </svg>
                 <div class="algorithm-condition-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
                 <!-- ko if: num() -->
