--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -2,93 +2,13 @@
     <div class="algorithm-view-holder" style="position: relative; width: 100%; min-width: 500px;">
         <div class="algorithm-transitions" data-bind="style: { 'width': connectorsAreaWidth() + 'px' }">
             <!-- ko foreach: transitions -->
-            <!-- ko if: type() === "far" -->
-            <!-- ko if: direction() === "down" -->
-            <div style="border:1px solid black; border-right:none; border-radius: 5px 0 0 5px; position:absolute;" data-bind="style: { top: (startBlock().posY() + startBlock().height() / 2) + 'px', height: (endBlock().posY() - startBlock().posY()) + 'px', left: ($parent.connectorsAreaWidth() - level() * $parent.blockMinDistance()) + 'px', width: level() * $parent.blockMinDistance() + 'px' }">
-                <div class="connector-far-down-arrow">
-                    <svg width="100%" height="100%">
-                        <line y1="25%" y2="50%" x1="50%" x2="100%" style="stroke:black;stroke-width:1"></line>
-                        <line y1="75%" y2="50%" x1="50%" x2="100%" style="stroke:black;stroke-width:1"></line>
-                    </svg>
-                </div>
-                <!-- ko if: label() -->
-                <div class="connector-label" data-bind="text: label"></div>
-                <!-- /ko -->
-            </div>
-            <!-- /ko -->
-            <!-- ko if: direction() === "up" -->
-            <div style="border:1px solid black; border-right:none; border-radius: 5px 0 0 5px; position:absolute;" data-bind="style: { top: (endBlock().posY() + endBlock().height() / 2) + 'px', height: (startBlock().posY() - endBlock().posY()) + 'px', left: ($parent.connectorsAreaWidth() - level() * $parent.blockMinDistance()) + 'px', width: level() * $parent.blockMinDistance() + 'px' }">
-                <div style="width: 10px; height:11px; position: absolute; right: 0px; top: -10px;">
-                    <svg width="100%" height="100%">
-                        <line y1="25%" y2="50%" x1="50%" x2="100%" style="stroke:black;stroke-width:1"></line>
-                        <line y1="75%" y2="50%" x1="50%" x2="100%" style="stroke:black;stroke-width:1"></line>
-                    </svg>
-                </div>
-                <!-- ko if: label() -->
-                <div class="connector-label" data-bind="text: label"></div>
-                <!-- /ko -->
-            </div>
-            <!-- /ko -->
-            <!-- /ko -->
-            <!-- ko if: type() === "direct" -->
-            <div style="width:1px; border:1px solid black; border-right:none; position:absolute;" data-bind="style: { top: startBlock().posY() + startBlock().height() + 'px', height: $parent.blockMinDistance() + 'px', left: $parent.connectorsAreaWidth() + $parent.blockWidth() / 2 + 'px' }">
-                <div style="width: 11px; height:10px; position: absolute; bottom: 5px; left: -6px;">
-                    <svg width="100%" height="100%">
-                        <line y1="50%" y2="100%" x1="25%" x2="50%" style="stroke:black;stroke-width:1"></line>
-                        <line y1="50%" y2="100%" x1="75%" x2="50%" style="stroke:black;stroke-width:1"></line>
-                    </svg>
-                </div>
-                <!-- ko if: label() -->
-                <div style="position:absolute; top:-2px; left:6px; background-color: white;" data-bind="text: label"></div>
-                <!-- /ko -->
-            </div>
+            <!-- ko template: template -->
             <!-- /ko -->
             <!-- /ko -->
         </div>
         <div class="algorithm-blocks" data-bind="draggableblocks: $data, style: { 'left': connectorsAreaWidth() + 'px', width: blockWidth() + 'px' }">
             <!-- ko foreach: blocks -->
-            <!-- ko ifnot: isCondition -->
-            <div class="algorithm-block algorithm-block-item" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }, css: { 'algorithm-block-inprogress': state() === 'inprogress', 'algorithm-block-teminator': isTerminator }">
-                <div class="algorithm-block-shadow"></div>
-                <div class="algorithm-block-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
-                <!-- ko if: num() -->
-                <div style="position:absolute; top:-0.5em; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
-                <!-- /ko -->
-                <!-- ko if: state() === "completed" -->
-                <div style="position:absolute; top:-0.5em; line-height: 1em; right:15px;">
-                    <span style="color: green; font-family: wingdings; font-size: 200%;">&#252;</span><!-- &#251; -->
-                </div>
-                <!-- /ko -->
-                <!-- ko template: "algorithm-block-controls" -->
-                <!-- /ko -->
-            </div>
-            <!-- /ko -->
-            <!-- ko if: isCondition -->
-            <div class="algorithm-block algorithm-block-condition" data-bind="style: { 'height': height() + 'px', 'lineHeight': height() + 'px', 'margin': $parent.blockMinDistance() + 'px 0' }">
-                <div class="algorithm-block-shadow">
-                    <svg width='100%' height='100%' style="position:absolute;left:0;">
-                        <defs>
-                            <filter id="algorithm-block-shadow-filter" x="-0.5" y="-0.5" width="200%" height="200%">
-                                <feOffset result="offOut" in="SourceAlpha" dx="0" dy="0" />
-                                <feGaussianBlur result="blurOut" in="offOut" stdDeviation="0.1" />
-                                <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
-                            </filter>
-                        </defs>
-                        <polygon data-bind="attr: { 'points': '0 ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' 0, ' + $parent.blockWidth() + ' ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' ' + height() }" style="stroke:gray;stroke-width:1" filter="url(#algorithm-block-shadow-filter)" />
-                    </svg>
-                </div>
-                <svg height="100%" width="100%" style="position:absolute;left:0;">
-                    <polygon data-bind="attr: { 'points': '0 ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' 0, ' + $parent.blockWidth() + ' ' + height()/2 + ', ' + $parent.blockWidth()/2 + ' ' + height() }" style="fill:white;stroke:black;stroke-width:1" />
-                </svg>
-                <div class="algorithm-condition-content" data-bind="style: { 'lineHeight': height() + 'px' }, text: text"></div>
-                <!-- ko if: num() -->
-                <div style="position:absolute; bottom:50%; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
-                <!-- /ko -->
-                <!-- ko template: "algorithm-block-controls" -->
-                <!-- /ko -->
-                <div class="algorithm-condition-connector algorithm-condition-connector-no algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.noTitle, 'data-transition': $parent.noTitle }"></div>
-                <div class="algorithm-condition-connector algorithm-condition-connector-yes algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.yesTitle }"></div>
-            </div>
+            <!-- ko template: template -->
             <!-- /ko -->
             <!-- /ko -->
         </div>
@@ -110,16 +30,6 @@
         </div>
         <div class="algorithm-block-details-container" data-bind="algodetails: $data">
         </div>
-    </div>
-</script>
-
-<script type="text/html" id="algorithm-block-controls">
-    <div class="algorithm-block-controls">
-        <div class="algorithm-block-command algorithm-hint algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data, true); }, attr: { 'data-title': $parent.addTitleBefore }"></div>
-        <div class="algorithm-block-command algorithm-hint algorithm-block-command-edit" data-bind="click: function() { $parent.editBlock($data); }, attr: { 'data-title': $parent.editTitle }"></div>
-        <div class="algorithm-block-command algorithm-hint algorithm-block-command-connect" draggable="true" data-bind="attr: { 'data-title': $parent.connectTitle }"></div>
-        <div class="algorithm-block-command algorithm-hint algorithm-block-command-remove" data-bind="click: function() { $parent.removeBlock($data); }, attr: { 'data-title': $parent.removeTitle }"></div>
-        <div class="algorithm-block-command algorithm-hint algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data); }, attr: { 'data-title': $parent.addTitleAfter }"></div>
     </div>
 </script>
 
