--- a/widget/blocks.html
+++ b/widget/blocks.html
@@ -47,7 +47,9 @@
     <div class="algorithm-block-controls">
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data, true); }, attr: { 'data-title': $parent.addTitleBefore }"></div>
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-edit" data-bind="click: function() { $parent.editBlock($data); }, attr: { 'data-title': $parent.editTitle }"></div>
+        <!-- ko ifnot: isCondition -->
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-connect" draggable="true" data-bind="attr: { 'data-title': $parent.connectTitle }"></div>
+        <!-- /ko -->
         <!-- ko if: $parent.blocks().length > 1 -->
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-remove" data-bind="click: function() { $parent.removeBlock($data); }, attr: { 'data-title': $parent.removeTitle }"></div>
         <!-- /ko -->
