--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -66,7 +66,7 @@
             <!-- /ko -->
         </div>
         <div class="algorithm-details-actions-holder">
-            <div class="algorithm-button" data-bind="click: function() { $data.isEditMode(false); }">Close</div>
+            <div class="algorithm-button" data-bind="click: function() { $data.isEditMode(false); }, text: Algorithm.AlgorithmViewModel.closeTitle"></div>
         </div>
     </div>
 </script>
