Algo width fix + fix start block

--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -1,6 +1,6 @@
 ﻿<script type="text/html" id="algorithm-view-template">
     <!-- ko with: $data -->
-    <div class="algorithm-view-holder" style="position: relative; width: 100%; min-width: 500px;">
+    <div class="algorithm-view-holder">
         <div class="algorithm-transitions" data-bind="style: { 'width': connectorsAreaWidth() + 'px' }">
             <!-- ko foreach: transitions -->
             <!-- ko template: template -->
