--- a/widget/blocks.html
+++ b/widget/blocks.html
@@ -10,9 +10,7 @@
             <span style="color: green; font-family: wingdings; font-size: 200%;">&#252;</span><!-- &#251; -->
         </div>
         <!-- /ko -->
-        <!-- ko if: $parent.allowEdit -->
         <!-- ko template: "algorithm-block-controls" -->
-        <!-- /ko -->
         <!-- /ko -->
     </div>
 </script>
@@ -38,16 +36,13 @@
         <!-- ko if: num() -->
         <div style="position:absolute; bottom:50%; line-height: 1em; left:15px; background-color: white;" data-bind="text: num"></div>
         <!-- /ko -->
-        <!-- ko if: $parent.allowEdit -->
         <!-- ko template: "algorithm-block-controls" -->
-        <!-- /ko -->
-        <div class="algorithm-condition-connector algorithm-condition-connector-no algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.noTitle, 'data-transition': $parent.noTitle }"></div>
-        <div class="algorithm-condition-connector algorithm-condition-connector-yes algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.yesTitle }"></div>
         <!-- /ko -->
     </div>
 </script>
 
 <script type="text/html" id="algorithm-block-controls">
+    <!-- ko if: $parent.allowEdit -->
     <div class="algorithm-block-controls">
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data, true); }, attr: { 'data-title': $parent.addBeforeTitle }"></div>
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-edit" data-bind="click: function() { $parent.editBlock($data); }, attr: { 'data-title': $parent.editTitle }"></div>
@@ -59,4 +54,9 @@
         <!-- /ko -->
         <div class="algorithm-block-command algorithm-hint algorithm-block-command-add" data-bind="click: function() { $parent.addBlock($data); }, attr: { 'data-title': $parent.addAfterTitle }"></div>
     </div>
+    <div class="algorithm-condition-connector algorithm-condition-connector-no algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.noTitle, 'data-transition': $parent.noTitle }"></div>
+    <!-- ko if: isCondition -->
+    <div class="algorithm-condition-connector algorithm-condition-connector-yes algorithm-hint" draggable="true" data-bind="style: { 'top': height()/2-8 + 'px' }, attr: { 'data-title': $parent.yesTitle }"></div>
+    <!-- /ko -->
+    <!-- /ko -->
 </script>
