--- a/widget/algorithm.html
+++ b/widget/algorithm.html
@@ -29,7 +29,7 @@
                 <!-- ko if: comment -->
                 <div style="position:absolute; top: 0; left:0; width: 40px; height: 100%">
                     <svg width="100%" height="100%">
-                        <line y1="50%" y2="50%" x1="0%" x2="100%" style="stroke:black;stroke-width:0.5;stroke-dasharray:10 5;"></line>
+                        <line y1="50%" y2="50%" x1="0%" x2="100%" style="stroke:gray;"></line>
                     </svg>
                 </div>
                 <div class="algorithm-comment-content">
