--- a/sources/algorithm.html
+++ b/sources/algorithm.html
@@ -52,7 +52,7 @@
             <!-- /ko -->
         </div>
         <div class="algorithm-details-actions-holder">
-            <div class="algorithm-button" data-bind="click: function() { $data.isEditMode(false); }, text: Algorithm.AlgorithmViewModel.closeTitle"></div>
+            <div class="algorithm-button" data-bind="click: function() { $data.isEditMode(false); }, text: closeTitle"></div>
         </div>
     </div>
 </script>
